+facebook login; +tab control demo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,18 +16,6 @@
         android:layout_marginStart="49dp" />
 
     <TextView
-        android:id="@+id/facebooklogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LOGIN"
-        android:layout_marginLeft="5dp"
-        android:textColor="#FF4861FA"
-        android:clickable="true"
-        android:layout_marginRight="10dp"
-        android:onClick="loginFacebook"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-    <TextView
         android:id="@+id/facebooklogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,4 +29,17 @@
         android:visibility="gone"
         android:clickable="true"
         android:onClick="logoutFacebook"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Facebook Login"
+        android:id="@+id/btnFBLogin"
+        android:onClick="loginFacebook"
+        android:layout_marginTop="71dp"
+        android:layout_marginRight="59dp"
+        android:layout_marginEnd="59dp"
+        android:layout_alignTop="@+id/prg_demo"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
